--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
 		"mini-css-extract-plugin": "^0.9.0",
 		"node-sass": "^4.14.0",
 		"normalize.css": "^8.0.1",
+		"regenerator-runtime": "^0.13.5",
 		"sass-loader": "^8.0.0",
 		"socket.io": "^2.2.0",
 		"source-map-loader": "^0.2.4",
